<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cycle Nav</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="show_route">Show Route</string>
    <string name="start_nav">Begin Navigation</string>
    <string name="get_guidance_narrative">Start Guidance Narr Activity</string>
    <string name="usr_loc">User Location</string>
    <string name="destination_label">Enter Destination</string>
    <string name="api_key">Fmjtd%7Cluur29a2ng%2Cax%3Do5-90z0qa</string>
    <string name="title_activity_cycle_navigation">CycleNavigation</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="dummy_location">Soquel, CA</string>
    <string name="title_activity_guidance_narrative">GuidanceNarrative</string>
	
	<string name="show_directions_list">Direction List </string>
    <string name="direction_list">Direction List</string>
    <string name="screen_orientation">Select Screen Orientation</string>
    <string name="help">Help</string>
    <string name="helpTitle">Help</string>
    <string name="begin_new_route">Begin New Route</string>
    <string name="beingnewroutetitle">Begin New Route</string>
    <string name="menuButtonDes">Menu</string>
    <string name="homeActivity">Main Screen</string>
    <string name="helpexit">OK</string>
    <string name="helpTxt">While cycling, information about miles and
        upcoming new direction will automatically hide. Simply touch
        anywhere on the screen to display this information again
        momentarily</string>
    <string name="mapPathHelp">Will map out the route</string>
    <string name="description">Icon that will make plot your route</string>
    <string name="begNavTxt">Will begin the navigation</string>
    <string name="description1">Interaction will being navigation</string>
    <string name="userLocationHelp">Will display your location on map</string>
    <string name="description2">Will look for your location and display it on screen</string>

</resources>
